@@ -32,6 +32,7 @@
 
 loadModule("bdtMod", TRUE)
 loadModule("bdtTzMod", TRUE)
+loadModule("bdtDuMod", TRUE)
 
 ## create a variable 'bdt' from out bdtMod Module
 ## this variable is used as a package-global instance
@@ -44,9 +45,14 @@ delayedAssign( "bdt", local( {
 .format_date <- function(x, ...) format(x$getDate(), ...)
 .show_date <- function(object) print(object$getDate())
 
+.format_tz <- function(x, ...) format(x$getRegion(), ...)
+.show_tz <- function(object) print(object$getRegion())
+
 ## define an onLoad expression to set some methods
 evalqOnLoad({
     setMethod("show", "Rcpp_bdtDate", .show_date)
+    setMethod("show", "Rcpp_bdtTz", .show_tz)
     setGeneric("format", function(x,...) standardGeneric("format") )
     setMethod("format", "Rcpp_bdtDate", .format_date )
+    setMethod("format", "Rcpp_bdtTz", .format_tz )
 })
