@@ -1,7 +1,16 @@
+2012-08-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/RcppBDTdu.cpp: New module 'bdtDu' for duration objects which
+	can represents hours, minutes, seconds, down to milli, micro and
+	nanoseconds (where the last part may be OS-dependent, see Boost docs)
+
 2012-08-24  Dirk Eddelbuettel  <edd@dexter>
 
 	* src/RcppBDTtz.cpp: Use Language evaluation to get location of zone
-	db file, reducing constructor to single argument for region
+	db file, reducing constructor to single argument for region; also
+	store initial region and added DST start/end time accessors
+
+	* R/zzz.R: add default display methods for bdtTz objects
 
 2012-08-22  Dirk Eddelbuettel  <edd@dexter>
 
@@ -11,7 +20,7 @@
 
 2012-08-20  Dirk Eddelbuettel  <edd@dexter>
 
-	* src/RcppBDTtz.cpp: New modules 'bdtTz' for time zone functionality
+	* src/RcppBDTtz.cpp: New module 'bdtTz' for time zone functionality
 	* R/zzz.R: Load bdtTzMod module on startup
 	* inst/include/RcppBDT.h: Also include local_time.hpp header
 
